<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">

        <item android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/pengaturan"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/gantibahasa"
            android:title="@string/change_language"
            />

        <item
            android:id="@+id/exit"
            android:title="@string/exit"

            />
    </group>



</menu>