<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/size_2"
    tools:context=".DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_detail_user"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/black"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="155dp"
        android:layout_height="155dp"/>

    <TextView
        android:id="@+id/txt_username"
        android:text="@string/username"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/avatar_detail_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/avatar_detail_user"
        app:layout_constraintTop_toBottomOf="@id/avatar_detail_user"
        app:layout_constraintVertical_bias="0.0"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/txttitk"
        android:text="@string/titikdua"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/txt_username"
        app:layout_constraintTop_toTopOf="@id/txt_username"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/username_detail"
        style="@style/size_1"
        android:text="@string/user"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/txttitk"
        app:layout_constraintTop_toTopOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_username"
        app:layout_constraintTop_toBottomOf="@id/txt_username"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/txt_titk2"
        android:text="@string/titikdua"
        app:layout_constraintStart_toStartOf="@+id/txttitk"
        app:layout_constraintTop_toTopOf="@id/txt_nama"
        android:textColor="@color/black"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/name_detail"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/username_detail"
        app:layout_constraintTop_toTopOf="@+id/txt_titk2"
        android:textColor="@color/black"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/txt_location"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/txt_nama"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        style="@style/size_1"/>

    <TextView
        android:id="@+id/txt_titk3"
        android:text="@string/titikdua"
        app:layout_constraintStart_toStartOf="@+id/txt_titk2"
        app:layout_constraintTop_toTopOf="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/location_detail"
        app:layout_constraintStart_toStartOf="@+id/name_detail"
        app:layout_constraintTop_toTopOf="@+id/txt_location"
        android:textColor="@color/black"
        android:text="@string/location"
        style="@style/size_1"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_location"
        app:layout_constraintVertical_bias="0.040"
        app:tabTextColor="@color/white"
        style="@style/size_3"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tab_layout"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintVertical_bias="0.927" />


</androidx.constraintlayout.widget.ConstraintLayout>